--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,8 @@ dist-ssr
 
 # Env files
 .env
-.env.local
-.env.development.local
-.env.production.local
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
@@ -33,6 +32,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Deployment metadata
+.vercel
+.netlify
+
+# TypeScript
+*.tsbuildinfo
 
 # Instructions
 READMEs/PUSH.md
